--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -14,6 +14,7 @@
         {% if categories %}
             <ul>
                 {% for category in categories %}
+                <li><a href="/rango/category/{{ category.slug }}">{{ category.name }}</a></li>
                 {% endfor %}
             </ul>
         {% else %}
