--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -21,6 +21,16 @@
             <strong>There are no categories present.</strong>
         {% endif %}
         
+        {% if pages %}
+            <ul>
+                {% for page in pages %}
+                <li>{{ page.title }}</li>
+                {% endfor %}
+            </ul>
+        {% else %}
+            <strong>There are no pages present.</strong>
+        {% endif %}
+        
         <a href="/rango/about/">About</a>
     </body>
 </html>
