--- a/templates/rango/add_category.html
+++ b/templates/rango/add_category.html
@@ -8,7 +8,7 @@
     <body>
         <h1>Add a Category</h1>
         
-        <form id="category_form" action="/rango/add_category" method="post">
+        <form id="category_form" action="/rango/add_category/" method="post">
             {% csrf_token %}
             
             {% for hidden in form.hidden_fields %}
@@ -19,7 +19,7 @@
                 {{ field.errors }}
                 {{ field.help_text }}
                 {{ field }}
-            {% endofor %}
+            {% endfor %}
             
             <input type="submit" name="submit" value="Create Category" />
             
