--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -31,7 +31,8 @@
             <strong>There are no pages present.</strong>
         {% endif %}
         
-        <a href="/rango/about/">About</a>
+        <a href="/rango/about/">About</a> <br />
         <a href="/rango/add_category">Add a New Category</a><br />
+        <a href="/rango/register/">Register Here</a> <br />
     </body>
 </html>
