--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -11,8 +11,12 @@
     <body>
         {% if user.is_authenticated %}
         <h1>Rango says... hello {{ user.username }}!</h1>
+        <a href="/rango/restricted/">Restricted Page</a><br />
+        <a href="/rango/logout/">Logout</a><br />
         {% else %}
         <h1>Rango says... hello world!</h1>
+        <a href="/rango/register/">Registere here!</a><br />
+        <a href="/rango/login/">Login</a><br />
         {% endif %}
         
         {% if categories %}
@@ -37,7 +41,5 @@
         
         <a href="/rango/about/">About</a> <br />
         <a href="/rango/add_category">Add a New Category</a><br />
-        <a href="/rango/register/">Register Here</a> <br />
-        <a href="/rango/login/">Login</a><br />
     </body>
 </html>
