--- a/templates/rango/base.html
+++ b/templates/rango/base.html
@@ -21,7 +21,7 @@
             {% else %}
                 <li><a href="/rango/register/">Register here!</a></li>
                 <li><a href="/rango/login/">Login</a></li>
-            <% endif %>
+            {% endif %}
             
                 <li><a href="/rango/about/">About</a></li>
             </ul>
