--- a/templates/rango/about.html
+++ b/templates/rango/about.html
@@ -1,18 +1,11 @@
-<!DOCTYPE html>
+{% extends 'rango/base.html' %}
+
 {% load staticfiles %} 
 
+{% block title %} About {% endblock %}
 
-<html>
-
-    <head>
-        <title>Rango</title>
-    </head>
-
-    <body>
+{% block body_block %}
         <h1>Rango says...</h1>
         this is the about page <strong>{{ boldmessage }}</strong><br />
-        <a href='/rango/'>Index</a><br />
         <img src="{% static 'images/rango4.jpg' %}" alt="Picture of Rango" />
-    </body>
-
-</html>
+{% endblock %}
