--- a/templates/rango/add_category.html
+++ b/templates/rango/add_category.html
@@ -1,11 +1,8 @@
-<!DOCTYPE html>
+{% extends 'rango/base.html' %}
     
-<html>
-    <head>
-        <title>Rango</title>
-    </head>
+{% block title %} Add category {% endblock %}
     
-    <body>
+{% block body_block %}
         <h1>Add a Category</h1>
         
         <form id="category_form" action="/rango/add_category/" method="post">
@@ -24,5 +21,4 @@
             <input type="submit" name="submit" value="Create Category" />
             
         </form>
-    </body>
-</html>
+{% endblock %}
