--- a/templates/rango/category.html
+++ b/templates/rango/category.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <title>Rango</title>
-    </head>
-    
-    <body>
+{% extends 'rango/base.html' %}
+
+{% load staticfiles %}
+
+{% block title %} {{category_name}} {% endblock %}
+
+{% block body_block %}
         <h1>{{category_name}}</h1>
         {% if category %}
             {% if pages %}
@@ -16,9 +16,10 @@
             {% else %}
             <strong>No pages currently in category.</strong>
             {% endif %}
+            {% if user.is_authenticated %}
+                <a href="/rango/category/{{category.slug}}/add_page/">Add a Page</a>
+                {% endif %}
         {% else %}
             The specified category {{ category_name }} does not exist!
         {% endif %}
-        <a href="/rango/category/{{ category_name_slug }}/add_page/">Add a New Page</a>
-    </body>
-</html>
+{% endblock %}
