--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -1,14 +1,8 @@
-<!DOCTYPE html>
+{% extends 'rango/base.html' %}
+
 {% load staticfiles %} 
 
-
-<html>
-
-    <head>
-        <title>Rango</title>
-    </head>
-
-    <body>
+{% block body_block %}
         {% if user.is_authenticated %}
         <h1>Rango says... hello {{ user.username }}!</h1>
         <a href="/rango/restricted/">Restricted Page</a><br />
@@ -38,8 +32,4 @@
         {% else %}
             <strong>There are no pages present.</strong>
         {% endif %}
-        
-        <a href="/rango/about/">About</a> <br />
-        <a href="/rango/add_category">Add a New Category</a><br />
-    </body>
-</html>
+{% endblock %}
