--- a/templates/rango/login.html
+++ b/templates/rango/login.html
@@ -1,11 +1,8 @@
-<!DOCTYPE html>
+{% extends 'rango/base.html' %}
 
-<html>
-    <head>
-        <title>Rango</title>
-    </head>
+{% block title %} Login to Rango! {% endblock %}
     
-    <body>
+{% block body_block %}
         <h1>Login to Rango!</h1>
         
         <form id="login_form" method="post" action="/rango/login/">
@@ -17,5 +14,4 @@
             
             <input type="submit" value="submit" />
         </form>
-    </body>
-</html>
+{% endblock %}
