--- a/templates/rango/register.html
+++ b/templates/rango/register.html
@@ -1,11 +1,8 @@
-<!DOCTYPE html>
+{% extends 'rango/base.html' %}
 
-<html>
-    <head>
-        <title>Rango</title>
-    </head>
+{% block title %} Register with Rango! {% endblock %}
     
-    <body>
+{% block body_block %}
         <h1>Register with Rango</h1>
         {% if registered %}
         Rango says: <strong>thank you for registering!</strong>
@@ -23,5 +20,4 @@
             <input type="submit" name="submit" value="Register">
         </form>
         {% endif %}
-    </body>
-</html>
+{% endblock %}
