load static in every template&refer to url in every template

--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -1,16 +1,16 @@
 {% extends 'rango/base.html' %}
 
-{% load staticfiles %} 
+{% load static %}
 
 {% block body_block %}
         {% if user.is_authenticated %}
         <h1>Rango says... hello {{ user.username }}!</h1>
-        <a href="/rango/restricted/">Restricted Page</a><br />
-        <a href="/rango/logout/">Logout</a><br />
+        <a href="{% url 'restricted' %}">Restricted Page</a><br />
+        <a href="{% url 'logout' %}">Logout</a><br />
         {% else %}
         <h1>Rango says... hello world!</h1>
-        <a href="/rango/register/">Registere here!</a><br />
-        <a href="/rango/login/">Login</a><br />
+        <a href="{% url 'register' %}">Registere here!</a><br />
+        <a href="{% url 'login' %}">Login</a><br />
         {% endif %}
         
         {% if categories %}
