--- a/templates/rango/register.html
+++ b/templates/rango/register.html
@@ -1,12 +1,14 @@
 {% extends 'rango/base.html' %}
 
+{% load static %}
+
 {% block title %} Register with Rango! {% endblock %}
     
 {% block body_block %}
         <h1>Register with Rango</h1>
         {% if registered %}
         Rango says: <strong>thank you for registering!</strong>
-        <a href="/rango/">Return to the homepage.</a><br />
+        <a href="{% url 'index' %}">Return to the homepage.</a><br />
         
         {% else %}
         Rango says: <strong>Register here!</strong><br />
