--- a/templates/rango/category.html
+++ b/templates/rango/category.html
@@ -1,6 +1,6 @@
 {% extends 'rango/base.html' %}
 
-{% load staticfiles %}
+{% load static %}
 
 {% block title %} {{category_name}} {% endblock %}
 
@@ -17,7 +17,7 @@
             <strong>No pages currently in category.</strong>
             {% endif %}
             {% if user.is_authenticated %}
-                <a href="/rango/category/{{category.slug}}/add_page/">Add a Page</a>
+                <a href="{% url 'add_page' category.slug %}">Add a Page</a>
                 {% endif %}
         {% else %}
             The specified category {{ category_name }} does not exist!
