load static in every template&refer to url in every template2

--- a/templates/rango/add_page.html
+++ b/templates/rango/add_page.html
@@ -1,5 +1,7 @@
 {% extends 'rango/base.html' %}
 
+{% load static %}
+
 {% block title %} Add a New Page {% endblock %}
     
 {% block body_block %}
