--- a/templates/rango/base.html
+++ b/templates/rango/base.html
@@ -24,6 +24,7 @@
             {% endif %}
             
                 <li><a href="{% url 'about' %}">About</a></li>
+                <li><a href="{% url 'index' %}">Rango's Homepage</a></li>
             </ul>
         </div>
     </body>
