--- a/templates/rango/login.html
+++ b/templates/rango/login.html
@@ -1,5 +1,7 @@
 {% extends 'rango/base.html' %}
 
+{% load static %}
+
 {% block title %} Login to Rango! {% endblock %}
     
 {% block body_block %}
