--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -32,4 +32,6 @@
         {% else %}
             <strong>There are no pages present.</strong>
         {% endif %}
+        
+        <p> visits: {{ visits }} </p>
 {% endblock %}
