show nb of visits and last_visits on about page

--- a/templates/rango/about.html
+++ b/templates/rango/about.html
@@ -8,4 +8,6 @@
         <h1>Rango says...</h1>
         this is the about page <strong>{{ boldmessage }}</strong><br />
         <img src="{% static 'images/rango4.jpg' %}" alt="Picture of Rango" />
+        <p>visits: {{ visits }}</p>
+        <p>last visit: {{ last_visit }}</p>
 {% endblock %}
