--- a/templates/rango/about.html
+++ b/templates/rango/about.html
@@ -5,9 +5,13 @@
 {% block title %} About {% endblock %}
 
 {% block body_block %}
+    <div class="page-header">
         <h1>Rango says...</h1>
-        this is the about page <strong>{{ boldmessage }}</strong><br />
-        <img src="{% static 'images/rango4.jpg' %}" alt="Picture of Rango" />
-        <p>visits: {{ visits }}</p>
-        <p>last visit: {{ last_visit }}</p>
+    </div>
+    <div>
+    this is the about page <strong>{{ boldmessage }}</strong><br />
+    <img src="{% static 'images/rango4.jpg' %}" alt="Picture of Rango" />
+    <p>visits: {{ visits }}</p>
+    <p>last visit: {{ last_visit }}</p>
+    </div>
 {% endblock %}
