--- a/templates/rango/add_category.html
+++ b/templates/rango/add_category.html
@@ -5,8 +5,9 @@
 {% block title %} Add category {% endblock %}
     
 {% block body_block %}
-        <h1>Add a Category</h1>
-        
+<div class="page-header">
+        <h2 class="form-signin-heading">Add a Category</h2>
+</div>
         <form id="category_form" action="/rango/add_category/" method="post">
             {% csrf_token %}
             
@@ -16,11 +17,12 @@
             
             {% for field in form.visible_fields %}
                 {{ field.errors }}
-                {{ field.help_text }}
-                {{ field }}
+                {{ field.help_text }}<br />
+                {{ field }}<br />
             {% endfor %}
             
-            <input type="submit" name="submit" value="Create Category" />
+             <br/>
+            <button class="btn btn-primary" type="submit" name="submit">Add Page</button>
             
         </form>
 {% endblock %}
