--- a/templates/rango/restricted.html
+++ b/templates/rango/restricted.html
@@ -5,5 +5,7 @@
 {% block title %} Restricted page {% endblock %}
 
 {% block body_block %}
+<div class="page-header">
         <p>this is the restricted page</p>
+</div
 {% endblock %}
