Show categories on every page

--- a/templates/rango/base.html
+++ b/templates/rango/base.html
@@ -1,4 +1,7 @@
 <!DOCTYPE html>
+  
+{% load rango_extras %}
+  
 <html lang="en">
   <head>
     <meta charset="utf-8">
@@ -7,7 +10,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <link rel="icon" href="http://getbootstrap.com/favicon.ico">
-
+    
     <title>Rango - {% block title %}How to Tango with Django!{% endblock %}</title>
 
     <link href="http://getbootstrap.com/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -53,7 +56,10 @@
     <div class="container-fluid">
       <div class="row">
         <div class="col-sm-3 col-md-2 sidebar">
-                {% block side_block %}{% endblock %}
+
+          {% block side_block %}
+          {% get_category_list category %}
+          {% endblock %}
 
         </div>
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
